@@ -52,6 +52,11 @@ my $start_memory_blocks_count = SPVM::memory_blocks_count();
   ok(TestCase::Lib::SPVM::CORE->test_strerror);
 }
 
+# contains
+{
+  ok(TestCase::Lib::SPVM::CORE->test_contains);
+}
+
 # split
 {
   ok(TestCase::Lib::SPVM::CORE->test_split);
