@@ -1,6 +1,7 @@
 0.0428 2018-04-17
   - rename new_list to list
   - rename new_hash to hash
+  - add contains function
 0.0427 2018-04-17
   - add getenv function
   - add SPVM::Errno module
